fix(components): force SwirlDateInput popover to front on mobile viewports

--- a/packages/swirl-components/src/components/swirl-date-input/swirl-date-input.css
+++ b/packages/swirl-components/src/components/swirl-date-input/swirl-date-input.css
@@ -84,3 +84,9 @@
     top: -0.625rem;
   }
 }
+
+.date-input__date-picker-popover {
+  @media (--to-tablet) {
+    position: fixed;
+  }
+}
